--- a/source/enyoRetrofit.css
+++ b/source/enyoRetrofit.css
@@ -26,7 +26,8 @@
     border-right: 1px solid dimgray;
 }
 .enyo-toolbar-light {
-    min-height: 46px
+    min-height: 46px;
+    background-color: transparent !important;
 }
 .enyo-retrofit-grabbutton {
     width: 46px;
